# pdf-to-markdown

./: .gitignore  README.md  pyproject.toml
src/: pdf_2_markdown_1.py  pdf_2_markdown_2.py
