[tool.poetry]
name = "pdf-to-markdown"
version = "0.1.0"
description = ""
authors = ["ngocmanh1609 <manh.tw1609@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
poethepoet = "0.29.0"
pymupdf = "^1.26.4"
pillow = "^11.3.0"
ollama = "^0.6.0"
pdf2image = "^1.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

